# llmRx

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.yml  docker-compose.yml  go.mod  go.sum  start.sh
.github/workflows/: docker.yml  test.yml
cmd/gateway/: bootstrap.go  bootstrap_test.go  main.go
docs/: ADMIN-REFACTOR.md  ARCHITECTURE.md  BYOK.md  COMPARATIVE.md  OPERATIONS.md  P10-OBSERVABILITY.md  P11-MCP.md  P8-CACHING-PLAN.md  P8-CACHING.md  P9-MULTIMODAL.md  PASSTHROUGH.md  PERFORMANCE.md  SQLITE-TUNING.md
internal/admin/: bcrypt_helper_test.go  effective.go  effective_test.go  handler.go  handler_test.go  plans.go  plans_test.go
internal/alert/: alert.go  alert_test.go  rules.go
internal/api/: chat_test.go  helpers_test.go  perf_e2e_test.go  router.go  stream_caps_test.go
internal/auth/: bcrypt_helper_test.go  hash.go  hash_test.go
internal/broker/: broker.go  broker_test.go
internal/config/: config.go  config_test.go
internal/intent/: dlopen_other.go  dlopen_unix.go  intent.go  intent_test.go  native_test.go
internal/intent/rust/: Cargo.toml
internal/intent/rust/src/: lib.rs
internal/logstore/: driver.go  manager.go  manager_test.go  sqlite_driver.go  sqlite_driver_test.go
internal/middleware/: auth.go  auth_test.go
internal/model/: alert.go  byok.go  types.go
internal/pool/: pool.go  pool_test.go
internal/provider/: adapter.go  adapter_test.go  multi.go  (+1 more)
scripts/: build-docker.sh
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+81 files in other folders)
